in the middle of adding share transition between main and track activity

--- a/app/src/main/res/layout/include_page_tracking.xml
+++ b/app/src/main/res/layout/include_page_tracking.xml
@@ -43,7 +43,28 @@
             android:name="com.google.android.gms.maps.MapFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
+
+        <LinearLayout
+            android:id="@+id/ll_control_bar"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:orientation="horizontal"
+            android:layout_alignParentBottom="true"
+            android:background="@color/color_accent"
+            android:visibility="gone">
+
+        </LinearLayout>
+
     </RelativeLayout>
+
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/fab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="@dimen/fab_margin"
+        android:transitionName="@string/transition_reveal1"
+        android:src="@drawable/ic_adjust_24dp" />
 
 
 </android.support.design.widget.CoordinatorLayout>
