--- a/app/src/main/res/layout/activity_tracking.xml
+++ b/app/src/main/res/layout/activity_tracking.xml
@@ -1,14 +1,15 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:openDrawer="start"
-    tools:context="com.rufus.shredaholic.activity.TrackingActivity">
+    tools:openDrawer="start">
 
-    <include layout="@layout/include_page_tracking" />
+    <include
+        layout="@layout/include_page_tracking"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_view"
@@ -17,8 +18,6 @@
         android:layout_gravity="start"
         android:fitsSystemWindows="true"
         tools:visibility="gone"/>
-
-
 
 </android.support.v4.widget.DrawerLayout>
 
