--- a/app/src/main/res/layout/include_page_tracking.xml
+++ b/app/src/main/res/layout/include_page_tracking.xml
@@ -30,10 +30,11 @@
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
+        android:layout_gravity="bottom|center_horizontal"
         android:layout_margin="@dimen/fab_margin"
         android:transitionName="@string/transition_reveal1"
-        app:elevation="0dp"/>
+        app:elevation="0dp"
+        app:fabSize="mini"/>
 
 
 </android.support.design.widget.CoordinatorLayout>
