--- a/app/src/main/res/layout/activity_geo_fence_list.xml
+++ b/app/src/main/res/layout/activity_geo_fence_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
-    tools:context=".MainActivity">
+    tools:context=".activity.GeoFenceListActivity">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
@@ -21,17 +21,18 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <include
-        layout="@layout/include_page_main"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/geofence_list"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent"/>
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:src="@drawable/ic_add_24dp"
         android:layout_margin="@dimen/fab_margin"
-        android:src="@drawable/ic_adjust_24dp" />
-
+        android:transitionName="@string/transition_reveal1"/>
 </android.support.design.widget.CoordinatorLayout>
