--- a/app/src/main/res/layout/include_tracking_main.xml
+++ b/app/src/main/res/layout/include_tracking_main.xml
@@ -20,7 +20,7 @@
         android:layout_height="68dp"
         android:orientation="horizontal"
         android:background="@color/color_accent"
-        android:elevation="2dpc"
+        android:elevation="2dp"
         android:visibility="invisible"
         tools:visibility="visible"/>
 
