--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="color_accent">#ff6e40</color>
     <color name="color_white">#ffffff</color>
 
+    <color name="blue_grey_900">#263238</color>
+
 </resources>
